<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.lmu.ifi.dbs.medmon.life</groupId>
    <artifactId>MedmonLife</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>de.lmu.ifi.dbs.medmon.life.core</module>
        <module>de.lmu.ifi.dbs.medmon.life.core.feature</module>
        <module>de.lmu.ifi.dbs.medmon.life.db</module>
        <module>de.lmu.ifi.dbs.medmon.life.e4</module>
        <module>de.lmu.ifi.dbs.medmon.life.ui.feature</module>
        <module>de.lmu.ifi.dbs.medmon.life.updatesite</module>
        <module>de.lmu.ifi.dbs.medmon.life.core.tests</module>
        <module>de.lmu.ifi.dbs.medmon.life.target</module>
    </modules>
    <properties>
        <tycho.version>0.16.0</tycho.version>
        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>
        <encoding>UTF-8</encoding>
    </properties>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/knowing/MedmonLife/issues</url>
    </issueManagement>
    <scm>
        <url>https://github.com/knowing/MedmonLife</url>
        <connection>git://github.com/knowing/MedmonLife.git</connection>
        <developerConnection>git://github.com/knowing/MedmonLife.git</developerConnection>
    </scm>
    <organization>
        <url>http://www.dbs.ifi.lmu.de</url>
        <name>Department of Computer Science Database Systems Group</name>
    </organization>
    <name>Medmon@Life</name>
    <url>https://github.com/knowing/MedmonLife</url>
    <description>A small application to managed sensor data and associate it with patients.</description>

    <build>
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho.version}</version>
                <extensions>true</extensions>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-surefire-plugin</artifactId>
                <version>${tycho.version}</version>
                <configuration>
                    <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=256M</argLine>
                    <includes>
                        <include>**/*Test.*</include>
                    </includes>
                    <dependencies>
                        <dependency>
                            <type>p2-installable-unit</type>
                            <artifactId>org.eclipse.equinox.ds</artifactId>
                        </dependency>
                    </dependencies>
                </configuration>
            </plugin>
            <!-- Use custom target platform -->
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho.version}</version>
                <configuration>
                    <target>
                        <artifact>
                            <groupId>de.lmu.ifi.dbs.medmon.life</groupId>
                            <artifactId>de.lmu.ifi.dbs.medmon.life.target</artifactId>
                            <version>${project.version}</version>
                        </artifact>
                    </target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>juno</id>
            <layout>p2</layout>
            <url>http://download.eclipse.org/releases/juno</url>
        </repository>
    </repositories>
</project>
